Better test files

--- a/test/test.html
+++ b/test/test.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Swagger Form</title>
+  <style>
+    .error { border: solid red 1px; }
+    output.error { color: red; padding: 2px; margin: 2px; }
+  </style>
   <script src="./test.js" type="module" defer async></script>
 </head>
 <body>
